--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,12 @@ body {
 }
 
 .pt-16 {
-  padding-top: 4rem;
+  padding-top: 2rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .px-4 {
