--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -5,8 +5,15 @@
 
 .flex {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
+}
+
+@media (min-width: 600px){
+  .flex{
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .search {
